# Ava

./: .gitignore  LICENSE.md  README.md  build.gradle.kts  c.json  custom_scenes.json  gradle.properties  scenes_en.json  scenes_zh.json  settings.gradle.kts  version.json
.kiro/settings/: mcp.json
app/: build.gradle.kts  build.gradle.kts.backup  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: areas.json  xiaomi_wallpaper.html
app/src/main/assets/stopWords/: stop.json
app/src/main/assets/wakeWords/: alexa.json  ava_ava.tflite  hey_home_assistant.json  hey_jarvis.json  hey_luna.json  hey_peppa_pig.json  okay_nabu.json
app/src/main/res/drawable/: advanced_24px.xml  button_background.xml  close_24px.xml  control_panel_background.xml  display_24px.xml  esphome_24px.xml  experiment_24px.xml  github_24px.xml  globe_24px.xml  ic_ha_button.xml  ic_ha_switch.xml  ic_music_note.xml  input_background.xml  mdi_account.xml  mdi_air_conditioner.xml  mdi_apple.xml  mdi_arrow_down.xml  mdi_arrow_left.xml  mdi_arrow_right.xml  mdi_arrow_up.xml  mdi_bell.xml  mdi_blinds.xml  mdi_brightness_5.xml  mdi_camera.xml  mdi_cancel.xml  mdi_cast.xml  mdi_cat.xml  mdi_ceiling_light.xml  mdi_curtains.xml  mdi_discord.xml  mdi_dog.xml  mdi_door.xml  mdi_door_open.xml  mdi_fan.xml  mdi_fire.xml  mdi_flash.xml  mdi_floor_lamp.xml  mdi_flower.xml  mdi_fridge.xml  mdi_garage.xml  (+67 more)
docs/: ECHO_SHOW_ANALYSIS.md  EXTERNAL_CONTROL.md  NATIVE_CODE_UPGRADE_ANALYSIS.md  README.md  STEMDOCK_QUICK_ENTITY.md  Technical-Documentation.md  User_Guide_English.md  VOICE_PIPELINE_ARCHITECTURE.md  YX_HARDWARE_INTEGRATION.md  reddit_post_v2_cn.md  userscript-guide.md  功能介绍.md  技术文档.md  用户指南_中文.md
docs/wiki/: Home.md  传感器.md  内嵌浏览器.md  天气显示.md  屏保系统.md  常见问题.md  快速开始.md  摄像头.md  系统要求.md  蓝牙.md  语音控制.md  通知场景.md  音乐播放.md
docs/wiki-en/: Bluetooth.md  Browser.md  Camera.md  FAQ.md  Home.md  Music-Playback.md  Notification-Scenes.md  Quick-Start.md  Screensaver.md  Sensors.md  System-Requirements.md  Voice-Control.md
esphomeproto/: build.gradle.kts
esphomeproto/src/main/proto/: api.proto  api_options.proto
gradle/: libs.versions.toml
microfeatures/: build.gradle.kts
microfeatures/src/main/cpp/: CMakeLists.txt  MicroFrontend.cpp  NoiseSuppressor.cpp
microfeatures/src/main/cpp/backup_old_ns/: noise_reduction_io.c  noise_reduction_io.h
microfeatures/src/main/cpp/kissfft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h
microfeatures/src/main/cpp/kissfft/tools/: fftutil.c  kfc.c  kfc.h  kiss_fastfir.c  kiss_fftnd.c  kiss_fftndr.c  kiss_fftndr.h  kiss_fftr.c  kiss_fftr.h  psdpng.c
microfeatures/src/main/cpp/tensorflow/lite/experimental/microfrontend/lib/: bits.h  fft.cc  fft.h  fft_io.c  fft_io.h  fft_test.cc  fft_util.cc  fft_util.h  filterbank.c  filterbank.h  filterbank_io.c  filterbank_io.h  filterbank_test.cc  filterbank_util.c  filterbank_util.h  frontend.c  frontend.h  frontend_io.c  frontend_io.h  frontend_main.c  frontend_memmap_generator.c  frontend_memmap_main.c  frontend_test.cc  frontend_util.c  frontend_util.h  kiss_fft_common.h  kiss_fft_int16.cc  kiss_fft_int16.h  log_lut.c  log_lut.h  log_scale.c  log_scale.h  log_scale_io.c  log_scale_io.h  log_scale_test.cc  log_scale_util.c  log_scale_util.h  noise_reduction.c  noise_reduction.h  noise_reduction_test.cc  (+14 more)
(+167 files in other folders)
